--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           fetch-depth: 0
       - name: Setup chart testing
         uses: helm/chart-testing-action@v2.0.1
-      - name: Lint  
+      - name: Lint
         run: ct lint --config .github/ct-lint.yaml
       - name: Lint docs
         run: .github/script/helm-docs.sh
@@ -65,6 +65,11 @@ jobs:
           if [[ -n "$changed" ]]; then
             echo "::set-output name=changed::true"
           fi
+      - name: Disable THP
+        if: steps.changes.outputs.changed == 'true'
+        run: |
+          sudo apt-get install hugepages
+          sudo hugeadm --thp-never
       - name: Create kind cluster
         if: steps.changes.outputs.changed == 'true'
         uses: helm/kind-action@v1.1.0
