Revert tag update in CI values

--- a/charts/dependabot-gitlab/ci/ci-values.yaml
+++ b/charts/dependabot-gitlab/ci/ci-values.yaml
@@ -14,7 +14,7 @@ redis:
 
 image:
   repository: registry.gitlab.com/dependabot-gitlab/dependabot
-  tag: check-sidekiq-latest
+  tag: master-latest
 
 web:
   startupProbe:
