--- a/charts/dependabot-gitlab/templates/secrets.yaml
+++ b/charts/dependabot-gitlab/templates/secrets.yaml
@@ -4,5 +4,5 @@ metadata:
   name: {{ include "dependabot-gitlab.fullname" . }}
 type: Opaque
 stringData:
-  production.yml: |-
+  credentials.yml: |-
     {{- include "dependabot-gitlab.secrets" . | nindent 4 -}}
