--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -110,6 +110,8 @@ env:
   sentryDsn: ""
   # -- Optional app url, used for automated webhook creation
   dependabotUrl: ""
+  # -- Path to mount credentials secret
+  credentialsPath: /etc/credentials
 
 credentials:
   # -- Gitlab access token, required
