--- a/charts/dependabot-gitlab/templates/deployment-web.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-web.yaml
@@ -26,7 +26,7 @@ spec:
           args: ["rails", "server"]
           volumeMounts:
             - name: credentials
-              mountPath: "{{ .Values.env.appRootPath }}/{{ .Values.env.credentialsPath }}"
+              mountPath: "{{ .Values.env.appRootPath }}/{{ .Values.env.appConfigPath }}"
           env:
             {{- include "dependabot-gitlab.database-credentials" . | nindent 12 }}
           envFrom:
