Add production key

--- a/charts/dependabot-gitlab/templates/secrets.yaml
+++ b/charts/dependabot-gitlab/templates/secrets.yaml
@@ -5,4 +5,5 @@ metadata:
 type: Opaque
 stringData:
   credentials.yml: |-
-    {{- include "dependabot-gitlab.secrets" . | nindent 4 -}}
+    production:
+    {{- include "dependabot-gitlab.credentials" . | nindent 6 -}}
