Update credentials path (#36)
* Update credentials path

* bump chart version

* Update variable and paths

* Fix mount path

* Add production key

* Add configmap checksum

* Update secrets file

* Fix path

* Bump app version

--- a/charts/dependabot-gitlab/templates/secrets.yaml
+++ b/charts/dependabot-gitlab/templates/secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "dependabot-gitlab.fullname" . }}
-type: Opaque
 stringData:
-  production.yml: |-
-    {{- include "dependabot-gitlab.secrets" . | nindent 4 -}}
+  credentials.yml: |-
+    production:
+    {{- include "dependabot-gitlab.credentials" . | nindent 6 -}}
