--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -26,7 +26,7 @@ spec:
           args: ["sidekiq"]
           volumeMounts:
             - name: credentials
-              mountPath: /home/dependabot/config/settings
+              mountPath: "{{ .Values.env.appRootPath }}/{{ .Values.env.appConfigPath }}"
           env:
             {{- include "dependabot-gitlab.database-credentials" . | nindent 12 }}
           envFrom:
