--- a/charts/dependabot-gitlab/ci/ci-values.yaml
+++ b/charts/dependabot-gitlab/ci/ci-values.yaml
@@ -30,4 +30,7 @@ worker:
     initialDelaySeconds: 30
 
 projects:
-  - dependabot-gitlab/dependabot
+  - test-repo
+
+env:
+  gitlab_url: gitlab.testing.svc.cluster.local
