fix gitlab url param 3

--- a/charts/dependabot-gitlab/ci/ci-values.yaml
+++ b/charts/dependabot-gitlab/ci/ci-values.yaml
@@ -33,4 +33,4 @@ projects:
   - test-repo
 
 env:
-  gitlabUrl: gitlab.testing.svc.cluster.local:4567
+  gitlabUrl: http://gitlab.testing.svc.cluster.local:4567
