feat: automatically add projects in post-install job (#38)
* feat: post-install job to register projects

* bump chart version

* add fake gitlab

* fix gitlab url param

* fix gitlab url param 2

* fix gitlab url param 3

--- a/charts/dependabot-gitlab/ci/ci-values.yaml
+++ b/charts/dependabot-gitlab/ci/ci-values.yaml
@@ -28,3 +28,9 @@ web:
 worker:
   startupProbe:
     initialDelaySeconds: 30
+
+projects:
+  - test-repo
+
+env:
+  gitlabUrl: http://gitlab.testing.svc.cluster.local:4567
