--- a/charts/dependabot-gitlab/Chart.yaml
+++ b/charts/dependabot-gitlab/Chart.yaml
@@ -1,19 +1,20 @@
+---
 apiVersion: v2
 name: dependabot-gitlab
 description: Deployment chart for dependabot-gitlab app
 type: application
-version: 0.0.26
-appVersion: 0.2.9
+version: 0.0.27
+appVersion: 0.2.16
 icon: https://gitlab.com/dependabot-gitlab/dependabot/-/raw/master/logo.png
 maintainers:
-  - name: Andrejs Cunskis
-    email: andrejs.cunskis@gmail.com
+- name: Andrejs Cunskis
+  email: andrejs.cunskis@gmail.com
 dependencies:
 - name: redis
-  version: ~12.1.1
+  version: "~12.1.1"
   repository: https://charts.bitnami.com/bitnami
   condition: redis.enabled
 - name: mongodb
-  version: ~10.1.2
+  version: "~10.1.2"
   repository: https://charts.bitnami.com/bitnami
   condition: mongodb.enabled
