Update app path

--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -113,7 +113,7 @@ env:
   # -- Configuration path
   appConfigPath: kube/config
   # -- App root
-  appRootPath: /home/dependabot
+  appRootPath: /home/dependabot/app
 
 credentials:
   # -- Gitlab access token, required
