--- a/charts/dependabot-gitlab/templates/job.yaml
+++ b/charts/dependabot-gitlab/templates/job.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     {{- include "dependabot-gitlab.labels" . | nindent 4 }}
   annotations:
-    helm.sh/hook: post-install
+    helm.sh/hook: post-install,post-upgrade
 spec:
   backoffLimit: 2
   activeDeadlineSeconds: 30
