--- a/charts/dependabot-gitlab/templates/deployment-web.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-web.yaml
@@ -33,6 +33,8 @@ spec:
           envFrom:
             - configMapRef:
                 name: {{ include "dependabot-gitlab.fullname" . }}
+            - secretRef:
+                name: {{ include "dependabot-gitlab.fullname" . }}-registries
           ports:
             - name: http
               containerPort: 3000
