--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -138,6 +138,7 @@ registriesCredentials: {}
 # -- List of projects to create/update on deployment
 projects: []
 
+# ref: https://github.com/bitnami/charts/tree/master/bitnami/redis
 redis:
   # -- Enable redis installation
   enabled: true
@@ -154,6 +155,7 @@ redis:
     # -- Redis password
     password: ""
 
+# ref: https://github.com/bitnami/charts/tree/master/bitnami/mongodb
 mongodb:
   # -- Enable mongodb installation
   enabled: true
