set default passwords for redis and mongodb

--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -153,7 +153,7 @@ redis:
     # -- Enable authentication
     enabled: true
     # -- Redis password
-    password: ""
+    password: "redis-password"
 
 # ref: https://github.com/bitnami/charts/tree/master/bitnami/mongodb
 mongodb:
@@ -171,7 +171,7 @@ mongodb:
     # -- MongoDB custom user username
     username: "dependabot-gitlab"
     # -- MongoDB custom user password
-    password: ""
+    password: "mongodb-password"
     # -- MongoDB custom database
     database: dependabot_gitab
   service:
