--- a/charts/dependabot-gitlab/templates/configmap.yaml
+++ b/charts/dependabot-gitlab/templates/configmap.yaml
@@ -17,7 +17,7 @@ data:
   SETTINGS__COMMANDS_PREFIX: {{ .Values.env.commandsPrefix | quote }}
   {{- end }}
   {{- if .Values.env.updateRetry }}
-  SETTINGS__UPDATE_RETRY: {{ .Values.env.updateRetry }}
+  SETTINGS__UPDATE_RETRY: {{ .Values.env.updateRetry | toString | quote }}
   {{- end }}
   {{- if .Values.env.sentryDsn }}
   SENTRY_DSN: {{ .Values.env.sentryDsn | quote }}
