Add update job retry configuration (#63)
* Add update job retry configuration

* Convert config value to string

--- a/charts/dependabot-gitlab/templates/configmap.yaml
+++ b/charts/dependabot-gitlab/templates/configmap.yaml
@@ -16,6 +16,9 @@ data:
   {{- if .Values.env.commandsPrefix }}
   SETTINGS__COMMANDS_PREFIX: {{ .Values.env.commandsPrefix | quote }}
   {{- end }}
+  {{- if .Values.env.updateRetry }}
+  SETTINGS__UPDATE_RETRY: {{ .Values.env.updateRetry | toString | quote }}
+  {{- end }}
   {{- if .Values.env.sentryDsn }}
   SENTRY_DSN: {{ .Values.env.sentryDsn | quote }}
   {{- end }}
