Add project registration parameters

--- a/charts/dependabot-gitlab/templates/configmap.yaml
+++ b/charts/dependabot-gitlab/templates/configmap.yaml
@@ -19,6 +19,15 @@ data:
   {{- if .Values.env.updateRetry }}
   SETTINGS__UPDATE_RETRY: {{ .Values.env.updateRetry | toString | quote }}
   {{- end }}
+  {{- if .Values.project_registration.mode }}
+  SETTINGS__PROJECT_REGISTRATION: {{ .Values.project_registration.mode | quote }}
+  {{- end -}}
+  {{- if .Values.project_registration.cron }}
+  SETTINGS__PROJECT_REGISTRATION_CRON: {{ .Values.project_registration.cron | quote }}
+  {{- end -}}
+  {{- if .Values.project_registration.namespace }}
+  SETTINGS__PROJECT_REGISTRATION_NAMESPACE: {{ .Values.project_registration.namespace | quote }}
+  {{- end -}}
   {{- if .Values.env.sentryDsn }}
   SENTRY_DSN: {{ .Values.env.sentryDsn | quote }}
   {{- end }}
