--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -124,6 +124,8 @@ env:
   commandsPrefix: ""
   # -- Update job retry count or 'false' to disable
   updateRetry: 2
+  # -- Enable metrics endpoint for prometheus
+  metrics: true
 
 credentials:
   # -- Gitlab access token, required
