--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -72,6 +72,10 @@ web:
     periodSeconds: 10
     # -- Startup probe timeout
     timeoutSeconds: 3
+  securityContext:
+    runAsUser: 1000
+    runAsGroup: 1000
+    fsGroup: 1000
 
 worker:
   # -- Worker container replicas count
@@ -98,12 +102,20 @@ worker:
     periodSeconds: 5
     # -- Startup probe timeout
     timeoutSeconds: 3
+  securityContext:
+    runAsUser: 1000
+    runAsGroup: 1000
+    fsGroup: 1000
 
 createProjectsJob:
   # -- Job Backoff Limit
   backoffLimit: 2
   # -- Job Active Deadline
   activeDeadlineSeconds: 30
+  securityContext:
+    runAsUser: 1000
+    runAsGroup: 1000
+    fsGroup: 1000
 
 env:
   # -- Redis URL
