--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       serviceAccountName: {{ include "dependabot-gitlab.serviceAccountName" . }}
       securityContext:
-        {{- include "dependabot-gitlab.securityContext" . | nindent 8 }}
+        {{- toYaml .Values.worker.securityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}-worker
           {{- include "dependabot-gitlab.image" . | nindent 10 }}
