Make securityContext configurable in values.yaml (#67)
* add security context to values.yaml

* create one value for all container `securityContext`s

* Bump chart version, update value name

Co-authored-by: rgruber <raphael.gruber@cloudflight.io>
Co-authored-by: Andrejs Cunskis <andrejs.cunskis@gmail.com>

--- a/charts/dependabot-gitlab/values.yaml
+++ b/charts/dependabot-gitlab/values.yaml
@@ -47,6 +47,12 @@ tolerations: []
 # -- Affinity
 affinity: {}
 
+# -- Security Context
+podSecurityContext:
+  runAsUser: 1000
+  runAsGroup: 1000
+  fsGroup: 1000
+
 web:
   # -- Web container replicas count
   replicaCount: 1
