Load credentials from env variables

--- a/charts/dependabot-gitlab/templates/secrets.yaml
+++ b/charts/dependabot-gitlab/templates/secrets.yaml
@@ -2,7 +2,18 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ include "dependabot-gitlab.fullname" . }}
-stringData:
-  credentials.yml: |-
-    production:
-    {{- include "dependabot-gitlab.credentials" . | nindent 6 -}}
+data:
+  # base credentials
+  {{- with .Values.credentials -}}
+  SETTINGS__GITLAB_ACCESS_TOKEN: {{ required "Gitlab access token must be provided" .gitlab_access_token }}
+  {{- if .github_access_token }}
+  SETTINGS__GITHUB_ACCESS_TOKEN: {{ .github_access_token }}
+  {{- end }}
+  {{- if .gitlab_auth_token }}
+  SETTINGS__GITLAB_AUTH_TOKEN: {{ .gitlab_auth_token }}
+  {{- end }}
+  {{- end }}
+  # registries
+  {{- range $key, $val := .Values.registriesCredentials }}
+  {{ $key }}: {{ $val | b64enc | quote }}
+  {{- end}}
