--- a/charts/dependabot-gitlab/templates/deployment-worker.yaml
+++ b/charts/dependabot-gitlab/templates/deployment-worker.yaml
@@ -27,16 +27,13 @@ spec:
         - name: {{ .Chart.Name }}-worker
           {{- include "dependabot-gitlab.image" . | nindent 10 }}
           args: ["sidekiq"]
-          volumeMounts:
-            - name: credentials
-              mountPath: "{{ .Values.env.appRootPath }}/{{ .Values.env.appConfigPath }}"
           env:
             {{- include "dependabot-gitlab.database-credentials" . | nindent 12 }}
           envFrom:
             - configMapRef:
                 name: {{ include "dependabot-gitlab.fullname" . }}
             - secretRef:
-                name: {{ include "dependabot-gitlab.fullname" . }}-registries
+                name: {{ include "dependabot-gitlab.fullname" . }}
           {{- if .Values.worker.livenessProbe.enabled }}
           livenessProbe:
             exec:
@@ -62,11 +59,6 @@ spec:
           resources:
             {{- toYaml .Values.worker.resources | nindent 12 }}
       terminationGracePeriodSeconds: 300 # Large dependency files or docker images can take long time to process
-      volumes:
-        - name: credentials
-          secret:
-            secretName: {{ include "dependabot-gitlab.fullname" . }}
-            defaultMode: 0400
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
