Add external redis and mongodb passwords

--- a/charts/dependabot-gitlab/templates/secrets.yaml
+++ b/charts/dependabot-gitlab/templates/secrets.yaml
@@ -17,3 +17,11 @@ data:
   {{- range $key, $val := .Values.registriesCredentials }}
   {{ $key }}: {{ $val | b64enc | quote }}
   {{- end}}
+  # redis credentials
+  {{- if and (not .Values.redis.enabled) .Values.redis.auth.enabled }}
+  REDIS_PASSWORD: {{ required "Redis password must be provided" .Values.redis.auth.password }}
+  {{- end }}
+  # mongodb password
+  {{- if and (not .Values.mongodb.enabled) .Values.mongodb.auth.enabled }}
+  MONGODB_PASSWORD: {{ required "MongoDB password must be provided" .Values.mongodb.auth.password }}
+  {{- end }}
