--- a/charts/dependabot-gitlab/templates/secrets.yaml
+++ b/charts/dependabot-gitlab/templates/secrets.yaml
@@ -3,8 +3,7 @@ kind: Secret
 metadata:
   name: {{ include "dependabot-gitlab.fullname" . }}
 data:
-  # base credentials
-  {{- with .Values.credentials -}}
+  {{- with .Values.credentials }}
   SETTINGS__GITLAB_ACCESS_TOKEN: {{ required "Gitlab access token must be provided" .gitlab_access_token }}
   {{- if .github_access_token }}
   SETTINGS__GITHUB_ACCESS_TOKEN: {{ .github_access_token }}
@@ -13,15 +12,12 @@ data:
   SETTINGS__GITLAB_AUTH_TOKEN: {{ .gitlab_auth_token }}
   {{- end }}
   {{- end }}
-  # registries
   {{- range $key, $val := .Values.registriesCredentials }}
   {{ $key }}: {{ $val | b64enc | quote }}
   {{- end}}
-  # redis credentials
   {{- if and (not .Values.redis.enabled) .Values.redis.auth.enabled }}
   REDIS_PASSWORD: {{ required "Redis password must be provided" .Values.redis.auth.password }}
   {{- end }}
-  # mongodb password
   {{- if and (not .Values.mongodb.enabled) .Values.mongodb.auth.enabled }}
   MONGODB_PASSWORD: {{ required "MongoDB password must be provided" .Values.mongodb.auth.password }}
   {{- end }}
