Base encode secrets

--- a/charts/dependabot-gitlab/templates/secrets.yaml
+++ b/charts/dependabot-gitlab/templates/secrets.yaml
@@ -4,20 +4,20 @@ metadata:
   name: {{ include "dependabot-gitlab.fullname" . }}
 data:
   {{- with .Values.credentials }}
-  SETTINGS__GITLAB_ACCESS_TOKEN: {{ required "Gitlab access token must be provided" .gitlab_access_token }}
+  SETTINGS__GITLAB_ACCESS_TOKEN: {{ required "Gitlab access token must be provided" .gitlab_access_token | b64enc | quote }}
   {{- if .github_access_token }}
-  SETTINGS__GITHUB_ACCESS_TOKEN: {{ .github_access_token }}
+  SETTINGS__GITHUB_ACCESS_TOKEN: {{ .github_access_token | b64enc | quote }}
   {{- end }}
   {{- if .gitlab_auth_token }}
-  SETTINGS__GITLAB_AUTH_TOKEN: {{ .gitlab_auth_token }}
+  SETTINGS__GITLAB_AUTH_TOKEN: {{ .gitlab_auth_token | b64enc | quote }}
   {{- end }}
   {{- end }}
   {{- range $key, $val := .Values.registriesCredentials }}
   {{ $key }}: {{ $val | b64enc | quote }}
   {{- end}}
   {{- if and (not .Values.redis.enabled) .Values.redis.auth.enabled }}
-  REDIS_PASSWORD: {{ required "Redis password must be provided" .Values.redis.auth.password }}
+  REDIS_PASSWORD: {{ required "Redis password must be provided" .Values.redis.auth.password | b64enc | quote }}
   {{- end }}
   {{- if and (not .Values.mongodb.enabled) .Values.mongodb.auth.enabled }}
-  MONGODB_PASSWORD: {{ required "MongoDB password must be provided" .Values.mongodb.auth.password }}
+  MONGODB_PASSWORD: {{ required "MongoDB password must be provided" .Values.mongodb.auth.password | b64enc | quote }}
   {{- end }}
